# CSD3

DSP/DF1/: CMakeLists.txt  Interpolation.cpp  circBuffer.cpp  main.cpp
DSP/DF2/: CMakeLists.txt  circBuffer.h  main.cpp
DSP/Phaser/: AllPassFilter.cpp  AllPassFilter.h  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  circBuffer.cpp  circBuffer.h  effect.cpp  effect.h  flanger.h  oscillator.cpp  phaser.cpp  phaser.h  sineOscillator.cpp  sineOscillator.h  utilities.h
